0.2.1 --
===================

* Enhance dependancies management (#66)

0.2.0 -- 2020-09-23
===================

* New default value for the level of the contour method in `detect_edges` (#42)
* Memoize theoretical contour (#56)
* Enhance performances (#54)
* Add worthington number (#50)
* Change default value for level in contour (#42)
* Add print function (#53)

0.1.0 -- 2020-06-03
===================

* First release