@@ -1,6 +1,7 @@
 0.2.1 --
 ===================
 
+* Use a new ransac model for circles
 * Enhance dependancies management (#66)
 
 0.2.0 -- 2020-09-23
